WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45576
fast/files/apply-blob-url-to-img.html timeout on Leopard
https://bugs.webkit.org/show_bug.cgi?id=45576
Summary
fast/files/apply-blob-url-to-img.html timeout on Leopard
Jian Li
Reported
2010-09-10 16:37:53 PDT
fast/files/apply-blob-url-to-img.html timeout on Leopard.
Attachments
Proposed Patch
(8.02 KB, patch)
2010-09-10 17:05 PDT
,
Jian Li
levin
: review+
jianli
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jian Li
Comment 1
2010-09-10 17:05:19 PDT
Created
attachment 67267
[details]
Proposed Patch
David Levin
Comment 2
2010-09-14 14:43:12 PDT
Comment on
attachment 67267
[details]
Proposed Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=67267&action=prettypatch
> WebKit/chromium/ChangeLog:8 > + * src/ResourceHandle.cpp: Remove the unneeded static comment.
s/unneeded/no longer applicable/
Jian Li
Comment 3
2010-09-14 15:27:58 PDT
Committed as
http://trac.webkit.org/changeset/67503
.
WebKit Review Bot
Comment 4
2010-09-14 16:04:14 PDT
http://trac.webkit.org/changeset/67503
might have broken GTK Linux 32-bit Release
Alexey Proskuryakov
Comment 5
2010-09-14 16:08:08 PDT
I don't think that this is a good fix. supportsBufferedData is a check for platform capabilities, and adding a check that internal to WebCore on top of it is highly confusing. I think that a different fix is needed here. Also, I may not understand the purpose of BlobResourceHandle, but it seems to share the same problem - although ResourceHandle is supposed to be a platform abstraction, it now has a subclass that contains WebCore logic.
Alexey Proskuryakov
Comment 6
2010-09-14 16:08:36 PDT
Since this also broke build, rolling out seems like an appropriate course of action to me.
Alexey Proskuryakov
Comment 7
2012-02-16 10:43:46 PST
This change didn't unskip the test. Done in <
http://trac.webkit.org/changeset/107879
>. It is disappointing that the above comments have not be acted upon.
Jian Li
Comment 8
2012-02-16 11:40:06 PST
(In reply to
comment #7
)
> This change didn't unskip the test. Done in <
http://trac.webkit.org/changeset/107879
>. > > It is disappointing that the above comments have not be acted upon.
My apology for not addressing the concern quickly. We did go through quite a lot discussions on which layer we wanted to hook up with the URL request processing. I agree that BlobResourceHandle inherited from ResourceHandle might not be a ideal solution to process the blob URL request. But the discussions did not lead to any other better choice at that time.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug