fast/files/apply-blob-url-to-img.html timeout on Leopard https://bugs.webkit.org/show_bug.cgi?id=45576

Reviewed by David Levin.

WebCore:

The failure on Leopard is caused by the static method
ResourceHandle::supportsBufferedData that returns true to indicate that
the buffered data support is enabled for blob resource. However,
BlobResourceHandle does not support this and we need to override this.

The fix is to change supportsBufferedData method from static to virtual
so that we can override the default behavior in BlobResourceHandle.

* fileapi/ThreadableBlobRegistry.cpp: Copy BlobData to make it cross-thread.
(WebCore::BlobRegistryContext::BlobRegistryContext):
* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::resourceData):
(WebCore::ResourceLoader::addData):
* platform/network/BlobResourceHandle.cpp:
(WebCore::BlobResourceHandle::supportsBufferedData): Override the default
behavior.
* platform/network/BlobResourceHandle.h:
* platform/network/ResourceHandle.h: Made supportsBufferedData virtual.
* platform/network/mac/ResourceHandleMac.mm:
(WebCore::ResourceHandle::bufferedData):

WebKit/chromium:

* src/ResourceHandle.cpp: Remove the no longer applicable static comment.

LayoutTests:

Update the test to compute the right coordinates to drag the file to.
This fixes the problem that onInputFileChange() is not called on
Leopard.

* fast/files/apply-blob-url-to-img.html:
* platform/mac/Skipped: Remove the passing test from Skipped list.

Canonical link: https://commits.webkit.org/58231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67503 268f45cc-cd09-0410-ab3c-d52691b4dbfc