third_party/WebKit/WebCore/fileapi/ThreadableBlobRegistry.cpp
@@ -42,7 +42,7 @@ namespace WebCore {
 struct BlobRegistryContext {
     BlobRegistryContext(const KURL& url, PassOwnPtr<BlobData> blobData)
         : url(url.copy())
-        , blobData(blobData)
+        , blobData(blobData->copy())
     {
     }
 
