third_party/WebKit/WebCore/platform/network/BlobResourceHandle.h
@@ -65,6 +65,7 @@ public:
 
     // ResourceHandle methods.
     virtual void cancel();
+    virtual bool supportsBufferedData();
 
     void start();
     int readSync(char*, int);
